force-app/main/default/objects/INPC__c/INPC__c.object-meta.xml
<CustomObject>
    <label>INPC</label>
    <nameField>
        <label>INPC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>INPC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>