force-app/main/default/objects/INPC__c/fields/INPC_Dlrs__c.field-meta.xml
<CustomField>
    <fullName>INPC_Dlrs__c</fullName>
    <label>% INPC USD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>