force-app/main/default/objects/INPC__c/fields/INPC_Mx__c.field-meta.xml
<CustomField>
    <fullName>INPC_Mx__c</fullName>
    <description>INPC cargado del DOF</description>
    <label>% INPC MXN</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>