force-app/main/default/objects/INPC__c/recordTypes/INPC.recordType-meta.xml
<RecordType>
    <fullName>INPC</fullName>
    <active>true</active>
    <label>INPC</label>
</RecordType>